Use default translation key structure for validation message
This makes it easier to translate the message and also prevents
some issues with the translation key not being available when the
class is loaded.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,12 @@ en:
       spree/review:
         one: one review
         other: "%{count} reviews"
+    errors:
+      models:
+        spree/review:
+          attributes:
+            rating:
+              you_must_enter_value_for_rating: "You must enter a value for rating."
   spree:
     approval_status: Approval status
     approve: Approve
@@ -63,5 +69,4 @@ en:
       other: "%{count} voices"
     was_this_review_helpful: "Was this review helpful to you?"
     write_your_own_review: Write your own review
-    you_must_enter_value_for_rating: "You must enter a value for rating."
     anonymous: Anonymous
