Add translations failed ActiveRecord validations
The content for this translation was present in all supported languages,
just the key changes.

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -15,6 +15,16 @@ de:
       spree/review:
         one: eine Rezension
         other: "%{count} Rezensionen"
+    errors:
+      models:
+        spree/review:
+          attributes:
+            rating:
+              you_must_enter_value_for_rating: "Bitte geben Sie eine Bewertung an."
+        spree/feedback_review:
+          attributes:
+            rating:
+              you_must_enter_value_for_rating: "Bitte geben Sie eine Bewertung an."
   spree:
     approval_status: Freischaltungsstatus
     approve: Freischalten
@@ -64,5 +74,4 @@ de:
       other: "%{count} Stimmen"
     was_this_review_helpful: War diese Rezension für Sie hilfreich?
     write_your_own_review: Rezension schreiben
-    you_must_enter_value_for_rating: "Bitte geben Sie eine Bewertung an."
     anonymous: Anonym
