--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -14,6 +14,16 @@ it:
       spree/review:
         one: una recensione
         other: "%{count} recensioni"
+    errors:
+      models:
+        spree/review:
+          attributes:
+            rating:
+              you_must_enter_value_for_rating: "Devi indicare una valutazione per questa recensione."
+        spree/feedback_review:
+          attributes:
+            rating:
+              you_must_enter_value_for_rating: "Devi indicare una valutazione per questa recensione."
   spree:
     approval_status: Stato
     approve: Approva
@@ -62,5 +72,4 @@ it:
       other: "%{count} voti"
     was_this_review_helpful: "Questa recensione è stata utile per te?"
     write_your_own_review: "Scrivi la tua recensione"
-    you_must_enter_value_for_rating: "Devi indicare una valutazione per questa recensione."
     anonymous: Anonimo
