--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -17,6 +17,16 @@ ru:
         few: "%{count} отзыва"
         other: "%{count} отзывов"
         many: "%{count} отзыва"
+    errors:
+      models:
+        spree/review:
+          attributes:
+            rating:
+              you_must_enter_value_for_rating: "Вы должны оценить отзыв."
+        spree/feedback_review:
+          attributes:
+            rating:
+              you_must_enter_value_for_rating: "Вы должны оценить отзыв."
   spree:
     reviews: Отзывы
     write_your_own_review: Оставьте свой отзыв
@@ -64,10 +74,8 @@ ru:
     feedback_review_for: "Отзывы: '%{review}'"
     out_of_5: "из 5"
     was_this_review_helpful: "Был ли Вам полезен этот отзыв?"
-    you_must_enter_value_for_rating: "Вы должны оценить отзыв."
     editing_review_for_html: 'Редактирование отзыва для HTML'
     no_reviews_available: "Отзывов нет"
     based_upon_review_count: "На основании всех отзывов"
     error_no_product: Отзывы продукт больше не существует
     anonymous: анонимный
-
