--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -14,6 +14,16 @@ sv:
       spree/review:
         one: "en recension"
         other: "%{count} recensioner"
+    errors:
+      models:
+        spree/review:
+          attributes:
+            rating:
+              you_must_enter_value_for_rating: "Du måste ange ett värde för betyg."
+        spree/feedback_review:
+          attributes:
+            rating:
+              you_must_enter_value_for_rating: "Du måste ange ett värde för betyg."
   spree:
     anonymous: Anonym
     approval_status: Status för godkännande
@@ -63,4 +73,3 @@ sv:
       other: "%{count} röster"
     was_this_review_helpful: "Var denna recension användbar för dig?"
     write_your_own_review: "Skriv din egen recension"
-    you_must_enter_value_for_rating: "Du måste ange ett värde för betyg."
