--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -14,6 +14,16 @@ zh-TW:
       spree/review:
         one: 一個評論
         other: '%{count}個評論'
+    errors:
+      models:
+        spree/review:
+          attributes:
+            rating:
+              you_must_enter_value_for_rating: 您必需輸入評級
+        spree/feedback_review:
+          attributes:
+            rating:
+              you_must_enter_value_for_rating: 您必需輸入評級
   spree:
     approve: 核準
     approved_reviews: 核準
@@ -61,5 +71,4 @@ zh-TW:
       other: "%{count} 聲音"
     was_this_review_helpful: 此評論對你是否有幫助？
     write_your_own_review: 寫下您的評論
-    you_must_enter_value_for_rating: 您必需輸入評級
     anonymous: 匿名者
