Add missing admin translation

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -41,6 +41,7 @@ de:
     reviews: Rezensionen
     admin:
       tab:
+        reviews: Rezensionen
         review_management: Rezensionen
     review_successfully_submitted: Ihre Rezension wurde erfolgreich übertragen. Vielen Dank!
     spree_reviews:
