--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -40,6 +40,7 @@ en-GB:
     reviews: Reviews
     admin:
       tab:
+        reviews: Reviews
         review_management: Reviews
     review_successfully_submitted: Review was successfully submitted
     spree_reviews:
