--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -40,6 +40,7 @@ tr:
     reviews: Yorumlar
     admin:
       tab:
+        reviews: Yorumlar
         review_management: Yorumlar
     review_successfully_submitted: Yorumunuz başarıyla iletildi
     spree_reviews:
