Added verified purchaser
One feature that many other eCommerce sites have is the concept of
a "verified purchaser" which is when someone leaves a review for a
product they verifiably purchased. In the implementation here we
add a toggle on whether to display the verfied purchaser on the
frontend, a column on the database to store if the review is from
a verified purchaser, and logic when creating the review to set
that value.

--- a/config/locales/de-CH.yml
+++ b/config/locales/de-CH.yml
@@ -62,6 +62,7 @@ de-CH:
       require_login: Login erforderlich
       review_settings: Rezensionseinstellungen
       show_email: E-Mail Adressen anzeigen
+      show_verified_purchaser: Verifizierten Käufer anzeigen
       track_locale: Sprache des Benutzers tracken
     star:
       one: "ein Sternchen"
@@ -70,6 +71,7 @@ de-CH:
     submit_your_review: Rezension abschicken
     submitted_on: Eingeschickt am
     unapproved_reviews: Nicht freigeschaltete Rezensionen
+    verified_purchaser: Verifizierter Käufer
     voice:
       one: "Eine Stimme"
       other: "%{count} Stimmen"
