--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -61,6 +61,7 @@ tr:
       require_login: Yorumları görebilmek için kullanıcı girişi
       review_settings: Yorum Ayarları
       show_email: e-posta adresini göster
+      show_verified_purchaser: Doğrulanmış alıcıyı göster
       track_locale: Kullanıcının yerel bilgilerini kaydet/takip et
     star:
       one: "1"
@@ -69,6 +70,7 @@ tr:
     submit_your_review: Gönder
     submitted_on: "Gönderilme Tarihi:"
     unapproved_reviews: Onaylanmamış
+    verified_purchaser: Doğrulanmış alıcı
     voice:
       one: "1 değerlendirme"
       other: "%{count} değerlendirme"
