--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -56,6 +56,7 @@ de:
     review_successfully_submitted: Ihre Rezension wurde erfolgreich übertragen. Vielen Dank!
     spree_reviews:
       feedback_rating: Feedback für Rezensionen erlauben
+      display_unapproved: Zeigen Sie nicht genehmigte Bewertungen in Auflistungen an
       include_unapproved: Unveröffentlichte Rezensionen anzeigen
       manage_review_settings: Einstellungen für die Darstellung von Rezensionen
       preview_size: Größe der Vorschau
