--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -56,6 +56,7 @@ pt:
     submission_guidelines: Diretrizes para enviar boas avaliações
     spree_reviews:
       feedback_rating: Pontuação de feedback
+      display_unapproved: Exibir avaliações não aprovadas nas listagens
       include_unapproved: Incluir avaliaçoes não-aprovadas nas lista
       manage_review_settings: Gerir a publicação de avaliações
       preview_size: Tamanho da versão resumida de avaliações
