--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -53,6 +53,7 @@ zh-CN:
     review_successfully_submitted: 已成功递交评论。
     spree_reviews:
       feedback_rating: 评级回馈
+      display_unapproved: 在列表中显示未经批准的评论
       include_unapproved: 包括未核准评论在列表中
       manage_review_settings: 控制评论的显示
       preview_size: 评论片段的大小
